public_html/scss/frontend.scss
@import 'variables';

@import '../bower_components/bootstrap/scss/bootstrap';

body {
    padding-top: 55px;
}

/* Header */
body > header {
    border-bottom: 1px solid #D0D0D0;
    -moz-box-shadow: 0px 1px 3px 1px #C0C0C0;
    -webkit-box-shadow: 0px 1px 3px 1px #C0C0C0;
    box-shadow: 0px 1px 3px 1px #C0C0C0;

    .pimx_logo img {
        max-height: 25px;
    }
}

/* Navbar */
.navbar-nav .nav-item {
    @include media-breakpoint-down(xs) {
        float: none;
        &:first-child {
            clear: both;
        }
    }
}

/* ****** Login ***** */
form.login {
    max-width: 400px;

    .form-control {
        position: relative;
        height: auto;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        padding: 10px;
        font-size: 16px;
    }
    input[type="text"] {
        margin-bottom: -1px;
        border-bottom-right-radius: 0;
        border-bottom-left-radius: 0;
    }
    input[type="password"] {
        margin-bottom: 10px;
        border-top-left-radius: 0;
        border-top-right-radius: 0;
    }
}

/* *********** Main Content ************** */
#main_content {
    padding-bottom: 20px;
}

/* ********************* Tables ********************** */
table.table td.amount {
    text-align: right;
}
table.table td.boolean {
    text-align: center;
}


/* ****************** Lists ************************* */
ul.labels {

}
ul.labels li {
    margin: 10px 0;
}
ul.labels li .child_icon {
    width: 16px;
    height: 16px;
    background-image: url('pimx/images/ui-icons_ef8c08_256x240.png');
    background-position: -80px 0;
    display: inline-block;
}
ul.labels > li > .child_icon {
    background-position: -32px 0;
}
ul.labels li ul {
    padding: 0 0 0 20px;
    margin: 0 0 5px 0;
}
ul.labels li a.label {
    font-size: 12pt;
}

/* ***************** Movements ****************** */
table#movements_grid td.datetime {
    font-size: 0.8em;
    white-space: nowrap;
}

.applied-accounts-list .sign-btn {
    &::after {
        font-family: "FontAwesome";
    }
    &.btn-danger {
        &::after {
            content: '\f063';
        }
    }
    &.btn-success {
        background-color: $brand-success;
        &::after {
            content: '\f062';
        }
    }
}

/* ****************** Reports ************************* */
.report {
    display: inline-block;
}

